# AI-course-project

./: .clang-format  .gitignore  CMakeLists.txt  build.py  build_configs.py  generate_policy.py  run_tests.py  setup_pwsh.ps1
cmake/: DownwardFiles.cmake  NeuralFDFiles.cmake  ProbFDFiles.cmake  QLearningFiles.cmake  StudentFiles.cmake  StudentTests.cmake  TestBaseFiles.cmake  TestFilesPFour.cmake  TestFilesPOne.cmake  TestFilesPThree.cmake  TestFilesPTwo.cmake  TestFilesPZero.cmake  common_cxx_flags.cmake  macros.cmake
driver/: run_components.py
include/downward/: command_line.h  evaluation_context.h  evaluation_result.h  evaluator.h  evaluator_cache.h  heuristic.h  open_list.h  open_list_factory.h  operator_cost.h  operator_id.h  option_parser.h  option_parser_util.h  per_state_information.h  per_task_information.h  plan_manager.h  planning_task.h  plugin.h  search_algorithm.h  search_node_info.h  search_progress.h  search_space.h  search_statistics.h  state.h  state_id.h  state_registry.h  task_id.h  task_proxy.h
include/neuralfd/: policy.h  policy_cache.h  policy_result.h
include/probfd/: probabilistic_task.h  task_proxy.h
include/q_learning/: epsilon_greedy_policy.h  experience_sample.h  experience_sampler.h  fp_compare.h  maxprob_simulator.h  mdp_simulator.h  on_policy_experience_sampler.h  policy.h  q_learning.h  qvf_approximator.h  qvf_approximator_network.h  qvf_approximator_table.h  random_policy.h  replay_buffer_experience_sampler.h  state_encoder.h  torch_networks.h  trainable_network.h
include/student/: sample.h
resources/experience_samples/: bw_multiple_simulations_on_policy.samples  bw_multiple_simulations_replay_buffer.samples  bw_one_simulation_on_policy.samples  bw_one_simulation_replay_buffer.samples  gripper_multiple_simulations_on_policy.samples  gripper_multiple_simulations_replay_buffer.samples  gripper_one_simulation_on_policy.samples  gripper_one_simulation_replay_buffer.samples  nomystery_multiple_simulations_on_policy.samples  nomystery_multiple_simulations_replay_buffer.samples  nomystery_one_simulation_on_policy.samples  nomystery_one_simulation_replay_buffer.samples  sokoban_multiple_simulations_on_policy.samples  sokoban_multiple_simulations_replay_buffer.samples  sokoban_one_simulation_on_policy.samples  visitall_multiple_simulations_on_policy.samples  visitall_multiple_simulations_replay_buffer.samples  visitall_one_simulation_on_policy.samples  visitall_one_simulation_replay_buffer.samples
resources/policies/: task1.pt  task2.pt  task3.pt  task4.pt  task5.pt
resources/sl_samples/: task1.samples  (+3 more)
src/: CMakeLists.txt
src/downward/: command_line.cc  evaluation_context.cc  evaluator.cc  heuristic.cc  open_list_factory.cc  operator_cost.cc  plan_manager.cc  planner.cc  planning_task.cc  search_algorithm.cc  search_progress.cc  search_space.cc  search_statistics.cc  state.cc  state_registry.cc  task_proxy.cc
src/downward/algorithms/: int_packer.cc  max_cliques.cc
src/downward/evaluators/: combining_evaluator.cc  const_evaluator.cc  g_evaluator.cc  max_evaluator.cc  plugin_group.cc  sum_evaluator.cc  weighted_evaluator.cc
src/downward/heuristics/: blind_search_heuristic.cc  cliques_heuristic.cc  ff_heuristic.cc  goal_count_heuristic.cc  max_heuristic.cc  pdb_heuristic.cc  relaxation_heuristic.cc
src/downward/open_lists/: tiebreaking_open_list.cc
src/downward/options/: bounds.cc  doc_printer.cc  doc_utils.cc  errors.cc  option_parser.cc  options.cc  plugin.cc  raw_registry.cc  registries.cc
src/downward/pdbs/: syntactic_projection.cc
src/downward/search_algorithms/: eager_search.cc  plugin_astar.cc  search_common.cc
src/downward/task_utils/: sampling.cc  successor_generator.cc  successor_generator_factory.cc  task_properties.cc
src/downward/tasks/: cost_adapted_task.cc  delegating_task.cc  modified_goals_task.cc  root_task.cc
src/downward/utils/: countdown_timer.cc  distribution.cc  logging.cc  rng.cc  rng_options.cc  strings.cc  system.cc  system_unix.cc  system_windows.cc
src/neuralfd/: policy.cc  policy_cache.cc  policy_result.cc
src/neuralfd/heuristics/: network_heuristic.cc
src/neuralfd/neural_networks/: abstract_network.cc  torch_network.cc  torch_policy_network.cc  torch_state_network.cc
src/neuralfd/policies/: heuristic_policy.cc  network_policy.cc
src/neuralfd/sampling_algorithms/: plugin_sampling.cc  sample_cache.cc  sampling_algorithm.cc  sampling_search.cc  sampling_search_base.cc  sampling_search_simple.cc  sampling_state_algorithm.cc  sampling_tasks.cc  sampling_v.cc
src/neuralfd/sampling_techniques/: sampling_technique.cc  technique_gbackward_none.cc  technique_iforward_none.cc  technique_none_none.cc  technique_null.cc  technique_uniform_none.cc
src/neuralfd/search_algorithms/: policy_walk.cc
src/neuralfd/task_utils/: operator_generator_factory.cc  operator_generator_internals.cc  predecessor_generator.cc  predecessor_generator_factory.cc  regression_task_proxy.cc  sampling.cc
src/neuralfd/tasks/: modified_init_goals_task.cc  partial_state_wrapper_task.cc
src/probfd/: probabilistic_task.cc  task_proxy.cc
src/q_learning/: epsilon_greedy_policy.cc  experience_sample.cc  fp_compare.cc  maxprob_simulator.cc  on_policy_experience_sampler.cc  q_learning.cc  qvf_approximator_network.cc  qvf_approximator_table.cc  random_policy.cc  replay_buffer_experience_sampler.cc  state_encoder.cc  torch_networks.cc
src/student/: sample.cc
src/tests/: run_tests.cc
src/tests/public/heuristic_tests/: blind_heuristic_tests.cc  cliques_heuristic_tests.cc  goal_count_tests.cc  hff_tests.cc  hmax_tests.cc  pdb_tests.cc
src/tests/public/rl_tests/: on_policy_experience_sampler_tests.cc  q_learning_tests.cc  qvf_network_tests.cc  qvf_table_tests.cc  replay_buffer_experience_sampler_tests.cc
src/tests/public/sl_tests/: sl_tests.cc
src/tests/student/: example_tests.cc
src/tests/tasks/: blocksworld.cc  gripper.cc  nomystery.cc  simple_task.cc  sokoban.cc  visitall.cc
src/tests/utils/: ff_utils.cc  heuristic_utils.cc  input_utils.cc  pdb_utils.cc  q_learning_utils.cc  search_utils.cc  task_utils.cc
(+106 files in other folders)
